# full-bringup

./: .gitmodules  README.md  installed.txt  link.sh  motion.yaml  oro_operator.launch
image_converter/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml
image_converter/src/: image_converter.cpp
oro_bringup/: CMakeLists.txt  package.xml
oro_bringup/launch/: oro_core.launch  oro_lidar.launch  oro_model.launch  oro_remote.launch  oro_robot.launch  oro_rpicamera.launch
oro_bringup/launch/includes/: description.launch.xml
oro_bringup/scripts/: create_udev_rules
oro_bringup/src/: oro_diagnostics.cpp
oro_calibrate/: CMakeLists.txt  package.xml  save.sh
oro_calibrate/launch/: oro_calibrate_build.launch  oro_calibrate_save.launch
oro_controllers/: CMakeLists.txt  package.xml
oro_controllers/config/: oro_start.yaml
oro_controllers/launch/: oro_controllers.launch
oro_controllers/src/: oro_controllers.cpp  trajectory_generator.cpp
oro_description/: CMakeLists.txt  package.xml
oro_description/urdf/: oro_waffle.gazebo.xacro  oro_waffle.urdf.xacro  oro_waffle_for_open_manipulator.urdf.xacro  oro_waffle_pi.gazebo.xacro  oro_waffle_pi.urdf.xacro  oro_waffle_pi_for_open_manipulator.urdf.xacro
oro_description_new/: CMakeLists.txt  package.xml  urdf.rviz
oro_description_new/config/: joint_names_oro_description.yaml
oro_description_new/launch/: display.launch  gazebo.launch  neck.launch
oro_description_new/meshes/: base_scan.STL  depth_cam.STL  neck.STL  pan.STL  tilt.STL  wheel_left.STL  wheel_right.STL
oro_description_new/urdf/: oro_description.csv  oro_description.urdf  oro_description_old.urdf  oro_neck.urdf
oro_example/: package.xml  setup.py
oro_fake/: CMakeLists.txt  package.xml
oro_fake/launch/: oro_fake.launch
oro_fake/src/: oro_fake.cpp
oro_full/: CMakeLists.txt  package.xml
oro_gazebo/: CMakeLists.txt  package.xml
oro_gazebo/include/oro_gazebo/: oro_drive.h
oro_gazebo/launch/: multi_map_merge.launch  multi_oro.launch  multi_oro_slam.launch  oro_autorace.launch  oro_autorace_mission.launch  oro_empty_world.launch  oro_gazebo_rviz.launch  oro_house.launch  oro_simulation.launch  oro_stage_1.launch  oro_stage_2.launch  oro_stage_3.launch  oro_stage_4.launch  oro_world.launch
oro_gazebo/models/oro_autorace/course/: model.sdf
oro_gazebo/models/oro_autorace/traffic_bar_down/: model.sdf
oro_gazebo/models/oro_autorace/traffic_bar_up/: model.sdf
oro_gazebo/models/oro_autorace/traffic_parking/: model.sdf
oro_gazebo/models/oro_autorace/traffic_stop/: model.sdf
oro_gazebo/models/oro_autorace/traffic_tunnel/: model.sdf
oro_gazebo/models/oro_burger/: model-1_4.sdf  model.sdf
oro_gazebo/models/oro_house/: model.sdf
oro_gazebo/models/oro_plaza/: model.config  model.sdf
oro_gazebo/models/oro_square/: model.config  model.sdf
oro_gazebo/models/oro_waffle/: model-1_4.sdf  model.sdf
oro_gazebo/models/oro_waffle_pi/: model-1_4.sdf  model.sdf
oro_gazebo/models/oro_world/: model-1_4.sdf  model.sdf
oro_gazebo/src/: oro_drive.cpp
oro_gazebo/worlds/: oro_autorace.world  oro_house.world  oro_stage_1.world  oro_stage_2.world  oro_stage_3.world  oro_stage_4.world  oro_world.world
oro_inertial/: CMakeLists.txt  package.xml
oro_inertial/config/: joint_names_oro_inertial.yaml
oro_inertial/launch/: display.launch  gazebo.launch
oro_inertial/urdf/: oro_inertial.csv  oro_inertial.urdf
oro_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
oro_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  oro.srdf  ros_controllers.yaml
oro_moveit_config/launch/: .gazebo.launch.swo  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  oro_moveit_controller_manager.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
oro_moveit_config/worlds/: empty.world
oro_msgs/: CMakeLists.txt  package.xml
oro_navigation/: .package.xml.swp  CMakeLists.txt  package.xml
oro_navigation/launch/: move_base.launch  oro_navigation.launch
oro_new/: CMakeLists.txt  package.xml
oro_new/launch/: display.launch  gazebo.launch
oro_new/meshes/: depth_cam.STL  tilt.STL  wheel_right.STL
oro_new/urdf/: oro_new.csv  oro_new.urdf
oro_new_origin/: CMakeLists.txt  package.xml
oro_new_origin/launch/: display.launch  gazebo.launch
oro_new_origin/meshes/: base_scan.STL  depth_cam.STL  neck.STL  pan.STL  tilt.STL  wheel_left.STL  wheel_right.STL
oro_new_origin/urdf/: oro_new_origin.csv  oro_new_origin.urdf
oro_operators/: CMakeLists.txt  package.xml
oro_operators/config/: scan.yaml
oro_operators/launch/: oro_operator.launch
oro_operators/src/: joint_operator.cpp
oro_simulations/: CMakeLists.txt
oro_slam/: .package.xml.swp  CMakeLists.txt  package.xml
oro_slam/config/: frontier_exploration.yaml
oro_slam/launch/: oro_cartographer.launch  (+5 more)
oro_teleop/: CMakeLists.txt  package.xml  setup.py
oro_teleop/launch/: oro_teleop_key.launch  turtlebot3_teleop_key.launch
oro_teleop/nodes/: oro_teleop_key
oro_v4/: CMakeLists.txt  package.xml  urdf.rviz
oro_v5/: CMakeLists.txt  package.xml  urdf.rviz
oro_v6/: CMakeLists.txt  oro_v6_old.urdf  package.xml  urdf.rviz
oro_v6/config/: oro_control.yaml
oro_v6/launch/: display.launch  gazebo.launch  oro_control_gazebo.launch
oro_v6/meshes/: base_scan.STL  depth_cam.STL  pan.STL  wheel_left_link.STL  wheel_right_link.STL
oro_v6/urdf/: oro.gazebo  oro.gazebo.xacro  oro.transmission.xacro  oro_v6.csv  oro_v6.urdf  oro_v6.xacro
oro_vision/: RosInferenceWithDB.cpp  Vision_DB_Setup.sql  a.out  dbtest.cpp  oro_vision_db.db  vision2db.cpp
(+25 files in other folders)
