<?xml version="1.0"?>
<package format="2">
  <name>oro_bringup</name>
  <version>1.2.1</version>
  <description>
    roslaunch scripts for starting the Oro.
  </description>
  <license>Apache 2.0</license>
  <maintainer email="teh6@rice.edu">Thomas</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>oro_msgs</depend>
  <exec_depend>oro_description</exec_depend>
  <exec_depend>oro_teleop</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>hls_lfcd_lds_driver</exec_depend>
  <!-- <exec_depend>realsense_camera</exec_depend> for TurtleBot3 Waffle using Intel RealSense Camera -->
  <!-- <exec_depend>raspicam_node</exec_depend> for TurtleBot3 Waffle Pi using Raspberry Pi Camera -->
</package>
