<?xml version="1.0"?>
<package format="2">
  <name>oro_description</name>
  <version>1.2.1</version>
  <description>
    3D models of the Oro for simulation and visualization.
  </description>
  <license>Apache 2.0</license>
  <maintainer email="teh6@rice.edu">Thomas</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
</package>
