<?xml version="1.0"?>
<package format="2">
  <name>oro_navigation</name>
  <version>1.2.1</version>
  <description>
    The oro_navigation provides roslaunch scripts for starting the navigation.
  </description>
  <license>Apache 2.0</license>
  <author email="teh6@rice.edu'">Thomas Herring</author>
  <author>Thomas Herring</author>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>oro_bringup</exec_depend>
</package>
