<?xml version="1.0"?>
<package format="2">
  <name>oro_teleop</name>
  <version>1.2.1</version>
  <description>
    Provides teleoperation using keyboard for Oro.
  </description>
  <license>BSD</license>
  <author>Thomas Herring</author>
  <author email="teh6@rice.edu">Thomas Herring</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
</package>
