<package format="2">
  <name>oro_v6</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for oro_v6</p>
    <p>This package contains configuration data, 3D models and launch files
for oro_v6 robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="teh6@rice.edu">Thomas</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>gazebo</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_controller</depend>
  <depend>joint_state_publisher</depend>
  <depend>effort_controllers</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <export>
	  <gazebo_ros gazebo_media_path="${pwd}"/>
	  <gazebo_ros gazebo_model_path="${pwd}/models"/>
  </export>
</package>
